# markitdown-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
benches/: conversion.rs
examples/: llm_usage.rs  openrouter_pdf.rs
src/: archive.rs  calendar.rs  csv.rs  docbook.rs  docx.rs  email.rs  epub.rs  excel.rs  html.rs  jupyter.rs  latex.rs  lib.rs  llm.rs  opml.rs  orgmode.rs  pdf.rs  rss.rs  rtf.rs  vcard.rs
tests/: archive.rs  llm.rs  pdf.rs
