[package]
name = "markitdown"
version = "0.2.0"
edition = "2021"
description = "A Rust library designed to facilitate the conversion of various document formats into markdown text with ObjectStore and LLM support."
repository = "https://github.com/Rheosoph/markitdown-rs"
license = "MIT"

[features]
default = ["native-tls"]

# TLS backend selection
#
# Choose which TLS implementation to use for network requests (LLM APIs, cloud storage, etc.)
# Only one TLS backend should be enabled at a time.
#
# Note: `object_store` with cloud features always uses rustls internally.
# These feature flags primarily control the TLS backend used by `rig-core` (LLM provider).

# Use the platform's native TLS implementation:
# - macOS: Security.framework
# - Windows: SChannel
# - Linux: OpenSSL
native-tls = ["rig-core/native-tls"]

# Use rustls (pure-Rust TLS implementation) — no system OpenSSL dependency needed.
# This is recommended for cross-compilation and reproducible builds.
rustls-tls = ["rig-core/rustls"]

# Force a vendored static liblzma build for XZ/LZMA support.
# Useful for reproducible builds and cross-compilation targets where no target liblzma is available.
static-liblzma = ["liblzma/static"]

[dependencies]
calamine = { version = "0.34.0", default-features = false, features = ["dates"] }
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.3.1"
htmd = "0.5.0"
kamadak-exif = "0.6.1"
infer = "0.19"
image = { version = "0.25", default-features = false, features = ["bmp", "tiff", "png", "jpeg", "gif", "webp"] }
mime_guess = "2.0.5"
docx-rust = "0.1.10"
pdf-extract = "0.10.0"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
quick-xml = "^0.39.2"
zip = { version = "8.2.0", default-features = false, features = [
  "deflate",
  "aes-crypto",
  "time",
] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22"
rig-core = { version = "0.34.0", default-features = false }
feed-rs = "2.3.1"
tempfile = "3"
object_store = { version = "0.12.5", features = ["gcp", "aws", "azure", "serde", "serde_json", "cloud"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
url = "2.5"
thiserror = "2.0"
hayro = {version="0.5.0", features = ["embed-fonts"]}
hayro-syntax = "0.5.0"
rtf-parser = "0.4.2"
rbook = {git = "https://github.com/Rheosoph/rbook.git", branch = "master"}
mail-parser = "0.11.2"
serde_yaml = "0.9.33"
toml = "0.9.8"
icalendar = "0.17.4"
vcard_parser = "0.2.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], default-features = false }
# Archive formats
tar = "0.4"
flate2 = { version = "1.1.9", default-features = true }
bzip2 = "0.6.1"
liblzma = "0.4"
zstd = "0.13"
sevenz-rust = "0.6"
cfb = "0.14.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
dotenvy = "0.15.7"

[[bench]]
name = "conversion"
harness = false
